test/apps/basics/src/routes/errors/module-scope-server.svelte
<script context="module">
	throw new Error('Crashing now');
</script>
